# ocaml_aoc_2023

./: Makefile  README.md  dune-project
day1/: dune  main.ml  main.mli
day10/: dune  main.ml
day11/: dune  main.ml
day2/: dune  main.ml
day3/: dune  main.ml
day4/: dune  main.ml
day5/: dune  main.ml
day6/: dune  main.ml
day7/: dune  main.ml
day8/: dune  main.ml
day9/: dune  main.ml
lib/: dune  utils.ml  utils.mli
