(lang dune 3.11)

(name aoc_2023)

(generate_opam_files true)

(source
 (github fizzyelt/ocaml_aoc_2023))

(authors "FizzyElt")

(maintainers "FizzyElt")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc_2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
